--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,7 +27,7 @@
 
 
     <div ng-show="loading">
-        <progressbar class="progress-striped active" value="loadingValue" type="{{loadingType}}">chargement...
+        <progressbar class="progress-striped active" value="loadingValue" type="{{loadingType}}">{{loadingMessage}}
         </progressbar>
     </div>
 
