some waiting messages...

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,10 @@ body {
 transition: width 2s ease;
 }
 
+#outerWidgetContainer {
+    width: 100% !important;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
 
